@@ -16,6 +16,7 @@ Changelog for 1.3.18
 * Fixed internal server error on requirements report (Chris T, h/t Nigel T)
 * Fixed formatting issues with long dates and ISO db dates (Chris T 3525843)
 * Removing XLS support which has been broken for some time (Chris T)
+* Fixes for slow menu performance on menu (Chris T)
 
 David M is David Mora
 Nigel T is Nigel Titley
